monitoring/overlays/ocp4-stage/pushgateway/pushgateway.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: pushgateway
  labels:
    app: pushgateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pushgateway
  template:
    metadata:
      labels:
        app: pushgateway
    spec:
      containers:
        - name: pushgateway
          image: pushgateway
          ports:
            - containerPort: 9091
              protocol: TCP
          resources:
            requests:
              memory: "512Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "100m"
          imagePullPolicy: Always
---
kind: Service
apiVersion: v1
metadata:
  name: pushgateway
  labels:
    app: pushgateway
spec:
  ports:
    - name: metrics
      protocol: TCP
      port: 9091
      targetPort: 9091
  selector:
    app: pushgateway
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: pushgateway
  labels:
    app: pushgateway
spec:
  port:
    targetPort: metrics
  to:
    kind: Service
    name: pushgateway
    weight: 100
